Add in a javadoc target.

--- a/build.xml
+++ b/build.xml
@@ -7,6 +7,7 @@
 	<property name="lib.dir" location="lib" />
 	<property name="build.main.dir" location="${build.dir}/main" />
 	<property name="build.test.dir" location="${build.dir}/test" />
+	<property name="build.doc.dir" location="${build.dir}/doc" />
 
 	<path id="main">
 		<pathelement location="${build.main.dir}" />
@@ -54,7 +55,15 @@
 	<target name="dist" depends="compile">
 		<jar destfile="${dist.dir}/jslint.jar" basedir="${build.main.dir}" />
 	</target>
-
+	
+	<target name="doc" depends="init">
+		<javadoc sourcepath="${src.dir}" packagenames="net.happygiraffe.jslint.*" destdir="${build.doc.dir}" charset="UTF-8" encoding="UTF-8">
+			<classpath refid="main" />
+			<!-- Java docs. -->
+			<link href="http://java.sun.com/j2se/1.5.0/docs/api" />
+		</javadoc>
+	</target>
+	
 	<target name="clean">
 		<delete dir="${build.main.dir}" />
 		<delete dir="${build.test.dir}" />
