--- a/jslint4java-ant/pom.xml
+++ b/jslint4java-ant/pom.xml
@@ -5,8 +5,14 @@
   <groupId>net.happygiraffe</groupId>
   <artifactId>jslint4java-ant</artifactId>
   <version>1.3-SNAPSHOT</version>
-  <name>jslint4java for ant</name>
+  <name>jslint4java ant task</name>
+  <url>http://code.google.com/p/jslint4java/</url>
   <description>An ant task to run JSLint.</description>
+  <parent>
+    <groupId>net.happygiraffe</groupId>
+    <artifactId>jslint4java-parent</artifactId>
+    <version>1-SNAPSHOT</version>
+  </parent>
   <dependencies>
     <dependency>
       <groupId>net.happygiraffe</groupId>
