All my source is UTF-8.

--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
           <configuration>
             <source>1.5</source>
             <target>1.5</target>
+            <encoding>UTF-8</encoding>
           </configuration>
         </plugin>
       </plugins>
