Enable compiler warnings.

--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,8 @@
             <source>1.5</source>
             <target>1.5</target>
             <encoding>UTF-8</encoding>
+            <showDeprecation>false</showDeprecation>
+            <showWarnings>true</showWarnings>
           </configuration>
         </plugin>
       </plugins>
