--- a/jslint4java-ant/pom.xml
+++ b/jslint4java-ant/pom.xml
@@ -23,6 +23,7 @@
       <groupId>org.apache.ant</groupId>
       <artifactId>ant</artifactId>
       <version>1.7.0</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
   <build>
