--- a/jslint4java-ant/pom.xml
+++ b/jslint4java-ant/pom.xml
@@ -66,7 +66,7 @@
             </goals>
             <configuration>
               <tasks>
-                <ant antfile="${build.testOutputDirectory}/antunit/tests.xml"
+                <ant antfile="${project.build.testOutputDirectory}/antunit/tests.xml"
                   inheritAll="false" inheritRefs="false">
                   <property name="test.classpath" refid="maven.test.classpath" />
                   <property name="test.skipped" value="${maven.test.skip}" />
