Set the Main-Class on the uber-jar.
This will let it be run as a command line tool as well as plonked in an ant lib directory.

--- a/jslint4java-ant/pom.xml
+++ b/jslint4java-ant/pom.xml
@@ -84,6 +84,11 @@
                   <descriptorRefs>
                     <descriptorRef>jar-with-dependencies</descriptorRef>
                   </descriptorRefs>
+                  <archive>
+                    <manifest>
+                      <mainClass>net.happygiraffe.jslint.Main</mainClass>
+                    </manifest>
+                  </archive>
                 </configuration>
               </execution>
             </executions>
