--- a/jslint4java-dist/pom.xml
+++ b/jslint4java-dist/pom.xml
@@ -12,6 +12,14 @@
     <groupId>net.happygiraffe</groupId>
     <version>1.3-SNAPSHOT</version>
   </parent>
+  <dependencies>
+    <dependency>
+      <groupId>net.happygiraffe</groupId>
+      <artifactId>jslint4java-ant</artifactId>
+      <version>${project.version}</version>
+      <classifier>jar-with-dependencies</classifier>
+    </dependency>
+  </dependencies>
   <build>
     <plugins>
       <plugin>
