--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
           <configuration>
             <source>1.5</source>
             <target>1.5</target>
-            <encoding>UTF-8</encoding>
+            <encoding>${project.build.sourceEncoding}</encoding>
             <showDeprecation>false</showDeprecation>
             <showWarnings>true</showWarnings>
           </configuration>
@@ -104,7 +104,6 @@
           <links>
             <link>http://java.sun.com/j2se/1.5.0/docs/api</link>
           </links>
-          <charset>UTF-8</charset>
         </configuration>
         <reportSets>
           <reportSet>
@@ -138,7 +137,6 @@
         <artifactId>maven-pmd-plugin</artifactId>
         <version>2.3</version>
         <configuration>
-          <sourceEncoding>UTF-8</sourceEncoding>
           <targetJdk>1.5</targetJdk>
           <!-- Needs another report plugin; I'll do it later. -->
           <linkXRef>false</linkXRef>
@@ -187,4 +185,7 @@
       </modules>
     </profile>
   </profiles>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
 </project>
