Use a depMgmt section.
I've left the scopes in place in the child POMs.  I think it makes things easier to read…

--- a/jslint4java-dist/pom.xml
+++ b/jslint4java-dist/pom.xml
@@ -14,9 +14,8 @@
   </parent>
   <dependencies>
     <dependency>
-      <groupId>net.happygiraffe</groupId>
+      <groupId>${project.groupId}</groupId>
       <artifactId>jslint4java-ant</artifactId>
-      <version>${project.version}</version>
       <classifier>jar-with-dependencies</classifier>
     </dependency>
   </dependencies>
