--- a/jslint4java-ant/pom.xml
+++ b/jslint4java-ant/pom.xml
@@ -12,20 +12,17 @@
   </parent>
   <dependencies>
     <dependency>
-      <groupId>net.happygiraffe</groupId>
+      <groupId>${project.groupId}</groupId>
       <artifactId>jslint4java</artifactId>
-      <version>1.3-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.apache.ant</groupId>
       <artifactId>ant</artifactId>
-      <version>1.7.0</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.ant</groupId>
       <artifactId>ant-antunit</artifactId>
-      <version>1.1</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
