--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,7 @@
       <dependency>
         <groupId>${project.groupId}</groupId>
         <artifactId>jslint4java-ant</artifactId>
+        <classifier>jar-with-dependencies</classifier>
         <version>${project.version}</version>
       </dependency>
       <dependency>
