Switch from assembly to shade plugin.
It's intended to do that, so we may as well use it.

--- a/jslint4java-dist/pom.xml
+++ b/jslint4java-dist/pom.xml
@@ -16,7 +16,7 @@
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>jslint4java-ant</artifactId>
-      <classifier>jar-with-dependencies</classifier>
+      <classifier>shaded</classifier>
     </dependency>
   </dependencies>
   <build>
