--- a/jslint4java-ant/pom.xml
+++ b/jslint4java-ant/pom.xml
@@ -65,23 +65,23 @@
         <plugins>
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-assembly-plugin</artifactId>
+            <artifactId>maven-shade-plugin</artifactId>
             <executions>
               <execution>
-                <id>make-assembly</id>
+                <id>make-shaded-jar</id>
                 <phase>package</phase>
                 <goals>
-                  <goal>attached</goal>
+                  <goal>shade</goal>
                 </goals>
                 <configuration>
-                  <descriptorRefs>
-                    <descriptorRef>jar-with-dependencies</descriptorRef>
-                  </descriptorRefs>
-                  <archive>
-                    <manifest>
+                  <shadedArtifactAttached>true</shadedArtifactAttached>
+                  <shadedClassifierName>shaded</shadedClassifierName>
+                  <transformers>
+                    <transformer
+                      implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                       <mainClass>net.happygiraffe.jslint.Main</mainClass>
-                    </manifest>
-                  </archive>
+                    </transformer>
+                  </transformers>
                 </configuration>
               </execution>
             </executions>
