--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
       <dependency>
         <groupId>${project.groupId}</groupId>
         <artifactId>jslint4java-ant</artifactId>
-        <classifier>jar-with-dependencies</classifier>
+        <classifier>shaded</classifier>
         <version>${project.version}</version>
       </dependency>
       <dependency>
@@ -155,6 +155,11 @@
           <artifactId>maven-assembly-plugin</artifactId>
           <!-- Avoid beta-3 for now, because of MASSEMBLY-384 -->
           <version>2.2-beta-2</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-shade-plugin</artifactId>
+          <version>1.2.1</version>
         </plugin>
       </plugins>
     </pluginManagement>
