--- a/jslint4java-dist/pom.xml
+++ b/jslint4java-dist/pom.xml
@@ -9,7 +9,7 @@
   </description>
   <parent>
     <artifactId>jslint4java-parent</artifactId>
-    <groupId>net.happygiraffe</groupId>
+    <groupId>net.happygiraffe.jslint4java</groupId>
     <version>1.3-SNAPSHOT</version>
   </parent>
   <dependencies>
