--- a/pom.xml
+++ b/pom.xml
@@ -166,6 +166,15 @@
           <artifactId>maven-gpg-plugin</artifactId>
           <version>1.0-alpha-4</version>
         </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-release-plugin</artifactId>
+          <version>2.0-beta-9</version>
+          <configuration>
+            <!-- sign release artifacts -->
+            <releaseProfiles>gpg</releaseProfiles>
+          </configuration>
+        </plugin>
       </plugins>
     </pluginManagement>
   </build>
@@ -270,6 +279,19 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-javadoc-plugin</artifactId>
           </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>dist</id>
+      <modules>
+        <module>jslint4java-dist</module>
+      </modules>
+    </profile>
+    <profile>
+      <id>gpg</id>
+      <build>
+        <plugins>
           <!-- Bind to this & all submodules. -->
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
@@ -286,12 +308,6 @@
           </plugin>
         </plugins>
       </build>
-    </profile>
-    <profile>
-      <id>dist</id>
-      <modules>
-        <module>jslint4java-dist</module>
-      </modules>
     </profile>
   </profiles>
   <properties>
