--- a/pom.xml
+++ b/pom.xml
@@ -171,6 +171,7 @@
           <artifactId>maven-release-plugin</artifactId>
           <version>2.0-beta-9</version>
           <configuration>
+            <autoVersionSubmodules>true</autoVersionSubmodules>
             <!-- sign release artifacts -->
             <releaseProfiles>gpg</releaseProfiles>
           </configuration>
