--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
     http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>net.happygiraffe.jslint4java</groupId>
+  <groupId>com.googlecode.jslint4java</groupId>
   <artifactId>jslint4java-parent</artifactId>
   <version>1.3-SNAPSHOT</version>
   <packaging>pom</packaging>
