Add documentation jar.
I've done this as static HTML so I can easily make it part of the assembly.  If you want it online, then link to the repo…

I've included prettify to help highlight some XML.  This is from:

        http://code.google.com/p/google-code-prettify/

--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
   <modules>
     <module>jslint4java</module>
     <module>jslint4java-ant</module>
+    <module>jslint4java-docs</module>
   </modules>
   <dependencyManagement>
     <dependencies>
