--- a/pom.xml
+++ b/pom.xml
@@ -275,6 +275,28 @@
       <modules>
         <module>jslint4java-dist</module>
       </modules>
+      <build>
+        <plugins>
+          <!-- Build the javadoc so we can aggregate it. -->
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-javadoc-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>aggregate-javadoc</id>
+                <phase>package</phase>
+                <goals>
+                  <goal>aggregate</goal>
+                </goals>
+                <configuration>
+                  <quiet>true</quiet>
+                </configuration>
+              </execution>
+            </executions>
+            <inherited>false</inherited>
+          </plugin>
+        </plugins>
+      </build>
     </profile>
     <profile>
       <id>gpg</id>
