Avoid hard coding version in the docs.
Use maven's filtering to put the correct version in.

--- a/jslint4java-docs/pom.xml
+++ b/jslint4java-docs/pom.xml
@@ -11,7 +11,27 @@
     <version>1.3-SNAPSHOT</version>
   </parent>
   <build>
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>true</filtering>
+      </resource>
+    </resources>
     <plugins>
+      <!-- Bind in order to enable filtering. -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-resources-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>filter-docs</id>
+            <phase>process-resources</phase>
+            <goals>
+              <goal>resources</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-assembly-plugin</artifactId>
