--- a/pom.xml
+++ b/pom.xml
@@ -200,6 +200,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
+        <version>2.5</version>
         <configuration>
           <quiet>true</quiet>
           <links>
