Always include the dist module.
I've realised that conditional inclusion of modules is somthing of an
anti-pattern.  If it's not always visible, the release plugin may miss
it…

--- a/jslint4java-dist/pom.xml
+++ b/jslint4java-dist/pom.xml
@@ -24,28 +24,33 @@
       <type>zip</type>
     </dependency>
   </dependencies>
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-assembly-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>dist</id>
-            <phase>package</phase>
-            <goals>
-              <goal>single</goal>
-            </goals>
-            <configuration>
-              <descriptors>
-                <descriptor>${basedir}/src/main/assembly/dist.xml</descriptor>
-              </descriptors>
-              <!-- Pretend it's the main artifact and lose the "dist" -->
-              <finalName>jslint4java-${project.version}</finalName>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
-  </build>
+  <profiles>
+    <profile>
+      <id>dist</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-assembly-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>dist</id>
+                <phase>package</phase>
+                <goals>
+                  <goal>single</goal>
+                </goals>
+                <configuration>
+                  <descriptors>
+                    <descriptor>${basedir}/src/main/assembly/dist.xml</descriptor>
+                  </descriptors>
+                  <!-- Pretend it's the main artifact and lose the "dist" -->
+                  <finalName>jslint4java-${project.version}</finalName>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
