--- a/jslint4java-ant/pom.xml
+++ b/jslint4java-ant/pom.xml
@@ -1,6 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
-    http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0     http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <artifactId>jslint4java-ant</artifactId>
   <name>jslint4java ant task</name>
@@ -8,7 +6,7 @@
   <parent>
     <groupId>com.googlecode.jslint4java</groupId>
     <artifactId>jslint4java-parent</artifactId>
-    <version>1.3-SNAPSHOT</version>
+    <version>1.3</version>
   </parent>
   <dependencies>
     <dependency>
@@ -38,8 +36,7 @@
             </goals>
             <configuration>
               <tasks>
-                <ant antfile="${project.build.testOutputDirectory}/antunit/tests.xml"
-                  inheritAll="false" inheritRefs="false">
+                <ant antfile="${project.build.testOutputDirectory}/antunit/tests.xml" inheritAll="false" inheritRefs="false">
                   <property name="test.classpath" refid="maven.test.classpath" />
                   <property name="test.skipped" value="${maven.test.skip}" />
                 </ant>
@@ -77,8 +74,7 @@
                   <shadedArtifactAttached>true</shadedArtifactAttached>
                   <shadedClassifierName>shaded</shadedClassifierName>
                   <transformers>
-                    <transformer
-                      implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                    <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                       <mainClass>com.googlecode.jslint4java.Main</mainClass>
                     </transformer>
                   </transformers>
