--- a/jslint4java-dist/pom.xml
+++ b/jslint4java-dist/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <artifactId>jslint4java-dist</artifactId>
   <packaging>pom</packaging>
@@ -9,7 +10,7 @@
   <parent>
     <artifactId>jslint4java-parent</artifactId>
     <groupId>com.googlecode.jslint4java</groupId>
-    <version>1.4-SNAPSHOT</version>
+    <version>1.3-SNAPSHOT</version>
   </parent>
   <dependencies>
     <dependency>
