Try to make gpg signed releases work.
Do this by avoiding releaseProfiles, and passing the correct arguments to the child process directly.  Fingers crossed…

I think I'm being affected by MRELEASE-459, but it's difficult to tell as it's part of the release process itself.

--- a/pom.xml
+++ b/pom.xml
@@ -179,8 +179,11 @@
           <version>2.0-beta-9</version>
           <configuration>
             <autoVersionSubmodules>true</autoVersionSubmodules>
-            <!-- sign release artifacts -->
+            <!-- sign release artifacts.  Affected by MRELEASE-459? -->
+            <!--
             <releaseProfiles>gpg</releaseProfiles>
+            -->
+            <arguments>-Pgpg -Dgpg.passphrase=${gpg.passphrase}</arguments>
           </configuration>
         </plugin>
       </plugins>
