Allow running tests in the ant module.

--- a/jslint4java-ant/pom.xml
+++ b/jslint4java-ant/pom.xml
@@ -23,6 +23,11 @@
       <artifactId>ant-antunit</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
