--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.googlecode.jslint4java</groupId>
   <artifactId>jslint4java-parent</artifactId>
-  <version>1.3.1</version>
+  <version>1.3.2-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>jslint4java parent</name>
   <url>http://code.google.com/p/jslint4java/</url>
