Add plugin documentation to site.
I need to work on the maven site, but that's a separate issue…

--- a/jslint-maven-plugin/pom.xml
+++ b/jslint-maven-plugin/pom.xml
@@ -54,4 +54,13 @@
       </plugin>
     </plugins>
   </build>
+  <reporting>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-plugin-plugin</artifactId>
+        <version>2.5</version>
+      </plugin>
+    </plugins>
+  </reporting>
 </project>
