issue 27: Write a maven plugin in ant.
This _seems_ to be sensible, given that we have a working ant plugin.  Why not reuse it?

This is a very basic version, no options supported.

--- a/pom.xml
+++ b/pom.xml
@@ -38,12 +38,18 @@
     <module>jslint4java-ant</module>
     <module>jslint4java-dist</module>
     <module>jslint4java-docs</module>
+    <module>jslint4java-maven-plugin</module>
   </modules>
   <dependencyManagement>
     <dependencies>
       <dependency>
         <groupId>${project.groupId}</groupId>
         <artifactId>jslint4java</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>${project.groupId}</groupId>
+        <artifactId>jslint4java-ant</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
