--- a/jslint4java-ant/pom.xml
+++ b/jslint4java-ant/pom.xml
@@ -16,7 +16,6 @@
     <dependency>
       <groupId>org.apache.ant</groupId>
       <artifactId>ant</artifactId>
-      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.ant</groupId>
@@ -63,6 +62,14 @@
   <profiles>
     <profile>
       <id>dist</id>
+      <!-- For the distribution, we assume this will be used as part of ant. -->
+      <dependencies>
+        <dependency>
+          <groupId>org.apache.ant</groupId>
+          <artifactId>ant</artifactId>
+          <scope>provided</scope>
+        </dependency>
+      </dependencies>
       <build>
         <plugins>
           <plugin>
